postgres/pgweb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pgweb
spec:
  selector:
    app: pgweb
  ports:
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
