postgres/pgweb/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgweb
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
  hostnames:
    - "pgweb.kube.local"
  rules:
    - backendRefs:
        - name: pgweb
          port: 8081
